--- a/api-specification.yaml
+++ b/api-specification.yaml
@@ -19,6 +19,7 @@ servers:
 
 security:
   - bearerAuth: []
+  - apiKeyAuth: []
 
 components:
   securitySchemes:
@@ -26,6 +27,11 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+    apiKeyAuth:
+      type: apiKey
+      in: header
+      name: x-api-key
+      description: string($string)
 
   schemas:
     StandardResponse:
@@ -312,11 +318,79 @@ paths:
                             type: string
                             example: v1
   # Authentication Endpoints
-  /v1/classroom-management/auth/email/login:
+  /v1/classroom-management/auth/signup:
     post:
       tags:
         - Authentication
-      summary: Login with Email
+      summary: User Signup
+      description: Register a new user account
+      security: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - first_name
+                - last_name
+                - email
+                - password
+                - role
+              properties:
+                first_name:
+                  type: string
+                  example: "John"
+                last_name:
+                  type: string
+                  example: "Doe"
+                email:
+                  type: string
+                  format: email
+                  example: "john.doe@example.com"
+                password:
+                  type: string
+                  format: password
+                  example: "securePassword123"
+                role:
+                  type: string
+                  enum: [student, trainer]
+                  example: "student"
+                phone:
+                  type: string
+                  example: "+1234567890"
+      responses:
+        '201':
+          description: User created successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/StandardResponse'
+                  - type: object
+                    properties:
+                      status:
+                        example: 201
+                      data:
+                        $ref: '#/components/schemas/User'
+        '400':
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '409':
+          description: Email already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /v1/classroom-management/auth/login:
+    post:
+      tags:
+        - Authentication
+      summary: User Login
       description: Authenticate user with email and password
       security: []
       requestBody:
@@ -344,11 +418,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /v1/classroom-management/auth/email/refresh-token:
+  /v1/classroom-management/auth/refresh-token:
     post:
       tags:
         - Authentication
-      summary: Refresh token for email login
+      summary: Refresh Token
       description: Get new access token using refresh token
       security: []
       requestBody:
