--- a/api-specification.yaml
+++ b/api-specification.yaml
@@ -653,15 +653,45 @@ paths:
           in: query
           schema:
             type: integer
+          description: Filter by course ID
         - name: trainer_id
           in: query
           schema:
             type: integer
+          description: Filter by trainer ID
         - name: status
           in: query
           schema:
             type: string
             enum: [scheduled, active, completed, cancelled]
+          description: Filter by class status
+        - name: start_date_from
+          in: query
+          schema:
+            type: string
+            format: date
+          description: Filter classes starting from this date
+          example: "2024-01-01"
+        - name: start_date_to
+          in: query
+          schema:
+            type: string
+            format: date
+          description: Filter classes starting before this date
+          example: "2024-12-31"
+        - name: page
+          in: query
+          schema:
+            type: integer
+            default: 1
+          description: Page number for pagination
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 20
+            maximum: 100
+          description: Number of classes per page
       responses:
         '200':
           description: List of classes
@@ -673,9 +703,24 @@ paths:
                   - type: object
                     properties:
                       data:
-                        type: array
-                        items:
-                          $ref: '#/components/schemas/Class'
+                        type: object
+                        properties:
+                          items:
+                            type: array
+                            items:
+                              $ref: '#/components/schemas/Class'
+                          total:
+                            type: integer
+                            example: 45
+                          page:
+                            type: integer
+                            example: 1
+                          limit:
+                            type: integer
+                            example: 20
+                          total_pages:
+                            type: integer
+                            example: 3
 
     post:
       tags:
@@ -861,6 +906,72 @@ paths:
               schema:
                 $ref: '#/components/schemas/Session'
 
+  /v1/classroom-management/classes/{class_id}/sessions/bulk:
+    post:
+      tags:
+        - Sessions
+      summary: Create multiple sessions for class
+      description: Efficiently create multiple sessions for a class at once
+      parameters:
+        - name: class_id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - sessions
+              properties:
+                sessions:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - session_number
+                      - topic
+                      - session_datetime
+                    properties:
+                      session_number:
+                        type: integer
+                        example: 1
+                      topic:
+                        type: string
+                        example: "Introduction to JavaScript"
+                      session_datetime:
+                        type: string
+                        format: date-time
+                        example: "2024-01-15T09:00:00Z"
+                      duration_minutes:
+                        type: integer
+                        example: 120
+      responses:
+        '201':
+          description: Sessions created successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/StandardResponse'
+                  - type: object
+                    properties:
+                      status:
+                        example: 201
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Session'
+        '400':
+          description: Invalid session data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /v1/classroom-management/sessions/{session_id}:
     get:
       tags:
@@ -935,6 +1046,30 @@ paths:
       tags:
         - Students
       summary: Get all students
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+            default: 1
+          description: Page number for pagination
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 20
+            maximum: 100
+          description: Number of students per page
+        - name: search
+          in: query
+          schema:
+            type: string
+          description: Search by first name, last name, or email
+        - name: is_active
+          in: query
+          schema:
+            type: boolean
+          description: Filter by active status
       responses:
         '200':
           description: List of students
@@ -946,9 +1081,24 @@ paths:
                   - type: object
                     properties:
                       data:
-                        type: array
-                        items:
-                          $ref: '#/components/schemas/User'
+                        type: object
+                        properties:
+                          items:
+                            type: array
+                            items:
+                              $ref: '#/components/schemas/User'
+                          total:
+                            type: integer
+                            example: 150
+                          page:
+                            type: integer
+                            example: 1
+                          limit:
+                            type: integer
+                            example: 20
+                          total_pages:
+                            type: integer
+                            example: 8
 
     post:
       tags:
@@ -1215,6 +1365,81 @@ paths:
                         example: 201
                       data:
                         $ref: '#/components/schemas/Attendance'
+
+  /v1/classroom-management/sessions/{session_id}/attendance/bulk:
+    post:
+      tags:
+        - Attendance
+      summary: Mark attendance for multiple students
+      description: Efficiently mark attendance for all students in a session
+      parameters:
+        - name: session_id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - attendance_records
+              properties:
+                attendance_records:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - student_id
+                      - status
+                    properties:
+                      student_id:
+                        type: integer
+                        example: 1
+                      status:
+                        type: string
+                        enum: [present, absent, late, excused]
+                        example: "present"
+                      check_in_time:
+                        type: string
+                        format: date-time
+                        example: "2024-01-15T09:05:00Z"
+                      notes:
+                        type: string
+                        example: "Student arrived on time"
+      responses:
+        '201':
+          description: Bulk attendance marked successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/StandardResponse'
+                  - type: object
+                    properties:
+                      status:
+                        example: 201
+                      data:
+                        type: object
+                        properties:
+                          created_count:
+                            type: integer
+                            example: 25
+                          updated_count:
+                            type: integer
+                            example: 0
+                          attendance_records:
+                            type: array
+                            items:
+                              $ref: '#/components/schemas/Attendance'
+        '400':
+          description: Invalid attendance data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
   /v1/classroom-management/attendance/{attendance_id}:
     put:
